Updated Edit Button size

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 flex-direction: column;
             }
 
-            button {
+            .action-buttons button {
                 width: 100%;
             }
 
@@ -436,6 +436,7 @@
                 font-size: 0.7rem;
                 bottom: 15px;
                 right: 15px;
+                width: auto;
             }
         }
     </style>
