--- a/index.html
+++ b/index.html
@@ -217,6 +217,38 @@
             background: var(--accent);
         }
 
+        .back-button {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            padding: 12px 16px;
+            font-family: 'IBM Plex Mono', monospace;
+            font-size: 1.5rem;
+            font-weight: 600;
+            border: 2px solid var(--text-primary);
+            background: var(--bg-primary);
+            color: var(--text-primary);
+            cursor: pointer;
+            transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+            z-index: 1000;
+            line-height: 1;
+            display: none;
+        }
+
+        .back-button.show {
+            display: block;
+        }
+
+        .back-button:hover {
+            background: var(--text-primary);
+            color: var(--bg-primary);
+            transform: translateX(-2px);
+        }
+
+        .back-button:active {
+            transform: translateX(0);
+        }
+
         .activity-title {
             font-family: 'Archivo Black', sans-serif;
             font-size: clamp(2rem, 5vw, 3.5rem);
@@ -440,6 +472,13 @@
                 right: 15px;
                 width: auto;
             }
+
+            .back-button {
+                padding: 10px 14px;
+                font-size: 1.3rem;
+                bottom: 15px;
+                left: 15px;
+            }
         }
     </style>
 </head>
@@ -538,11 +577,12 @@
                 <div class="activity-time" id="activityTime">Time category</div>
                 <div class="action-buttons">
                     <button class="primary" onclick="selectTime(currentTime)">ANOTHER</button>
-                    <button onclick="resetApp()">RESTART</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <button class="back-button" id="backButton" onclick="resetApp()">←</button>
 
     <script>
         // Default activity database
@@ -759,8 +799,9 @@
             document.getElementById('activityTitle').textContent = randomActivity.toUpperCase();
             document.getElementById('activityTime').textContent = minutes === 40 ? '40+ MINUTES' : `${minutes} MINUTE${minutes > 1 ? 'S' : ''}`;
             
-            // Hide edit button on result screen
+            // Hide edit button and show back button on result screen
             document.getElementById('editToggle').classList.add('hidden');
+            document.getElementById('backButton').classList.add('show');
             
             // Switch screens
             showScreen('resultScreen');
@@ -769,8 +810,9 @@
         // Reset to time selection
         function resetApp() {
             currentTime = null;
-            // Show edit button again
+            // Show edit button and hide back button
             document.getElementById('editToggle').classList.remove('hidden');
+            document.getElementById('backButton').classList.remove('show');
             showScreen('timeScreen');
         }
 
